--- a/exploration_and_solution.ipynb
+++ b/exploration_and_solution.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "4       0.0380  101.665  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "4  101.665  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "4  101.665  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -639,6 +639,210 @@
     "\n",
     "# Draw the heatmap with the mask and correct aspect ratio\n",
     "sns.heatmap(corr_all, mask = mask, cmap = \"BuPu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this heatmap we can conclude that the most important variables are\n",
+    "\n",
+    "- danceability\n",
+    "- duration_ms\n",
+    "- energy\n",
+    "- explicit\n",
+    "- loudness\n",
+    "- tempo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "popularity          0\n",
+       "valence             0\n",
+       "acousticness        0\n",
+       "danceability        0\n",
+       "duration_ms         0\n",
+       "energy              0\n",
+       "explicit            0\n",
+       "instrumentalness    0\n",
+       "key                 0\n",
+       "liveness            0\n",
+       "loudness            0\n",
+       "mode                0\n",
+       "speechiness         0\n",
+       "tempo               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Obtain the x and y values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['danceability', 'duration_ms', 'energy', 'explicit', 'loudness', 'tempo']\n",
+    "X = df[columns]\n",
+    "Y = popularity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scale inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaled_X = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Separate into training and validation dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_train, x_val, y_train, y_val = train_test_split(scaled_X, Y, test_size=0.30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tensorflow - MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15\n",
+      "3734/3734 [==============================] - 11s 3ms/step - loss: 687.1597 - root_mean_squared_error: 26.2137\n",
+      "Epoch 2/15\n",
+      "3734/3734 [==============================] - 11s 3ms/step - loss: 477.1467 - root_mean_squared_error: 21.8437\n",
+      "Epoch 3/15\n",
+      "3734/3734 [==============================] - 10s 3ms/step - loss: 371.8975 - root_mean_squared_error: 19.2846\n",
+      "Epoch 4/15\n",
+      "3734/3734 [==============================] - 8s 2ms/step - loss: 323.9333 - root_mean_squared_error: 17.9981\n",
+      "Epoch 5/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 312.8805 - root_mean_squared_error: 17.6884\n",
+      "Epoch 6/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 300.5005 - root_mean_squared_error: 17.3349\n",
+      "Epoch 7/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 294.7877 - root_mean_squared_error: 17.1694\n",
+      "Epoch 8/15\n",
+      "3734/3734 [==============================] - 8s 2ms/step - loss: 291.7885 - root_mean_squared_error: 17.0818\n",
+      "Epoch 9/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 289.5246 - root_mean_squared_error: 17.0154\n",
+      "Epoch 10/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 288.5552 - root_mean_squared_error: 16.9869\n",
+      "Epoch 11/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 286.3147 - root_mean_squared_error: 16.9208\n",
+      "Epoch 12/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 286.3731 - root_mean_squared_error: 16.9226\n",
+      "Epoch 13/15\n",
+      "3734/3734 [==============================] - 8s 2ms/step - loss: 285.4896 - root_mean_squared_error: 16.8964\n",
+      "Epoch 14/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 284.0124 - root_mean_squared_error: 16.8527\n",
+      "Epoch 15/15\n",
+      "3734/3734 [==============================] - 7s 2ms/step - loss: 284.1946 - root_mean_squared_error: 16.8581\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x149395fd0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.metrics import RootMeanSquaredError\n",
+    "\n",
+    "rmse = RootMeanSquaredError()\n",
+    "model = Sequential([\n",
+    "    Dense(50, activation='relu', input_shape=(len(columns),)),\n",
+    "    Dense(10, activation='tanh'),\n",
+    "    Dense(50, activation='relu'),\n",
+    "    Dense(10, activation='tanh'),\n",
+    "    Dense(50, activation='relu'),\n",
+    "    Dense(10, activation='tanh'),\n",
+    "    Dense(50, activation='relu'),\n",
+    "    Dense(10, activation='tanh'),\n",
+    "    Dense(1, activation='linear'),\n",
+    "])\n",
+    "model.compile(optimizer='adam', loss='mse', metrics=[rmse])\n",
+    "model.fit(x_train, y_train, epochs=15)"
    ]
   }
  ],
